
2011-05-18 added hexdump command. Its shortcut is Delete key leading the line.
2011-05-09 (Roy)packed up a snippet of code to form read_dbr().
2011-05-08 (Roy)supported Dell Real-Mode Kernel(DRMK) and ReactOS freeldr.
2011-05-06 move fat_dir to asm.S.
2011-04-30 move fat_read to asm.S.
2011-04-29 corrected the output message of root command.
2011-04-26 move fat_mount to asm.S.
2011-04-25 Makefile by Roy(-momit-leaf-frame-pointer to -fomit-frame-pointer).
2011-04-23 implemented a simplified map command for only whole-drive mappings.
2011-04-20 added wee127.mbr with the blocklist and map commands built in it.
2011-03-23 excluded NTFS short filenames.
2011-03-22 fixed a bug on case sensitivity in filename completion. added a new parameter "case_insensitive" to print_a_completion().
2011-03-19 fixed a bug on NTFS unicode filename handling. let unicode_to_utf8() return string length after convertion.
2011-03-06 add new find option --active to gain the active primary partition.
2011-03-04 set the current root device as the default boot device of grub.exe.
2011-02-25 fixed endless timeout 0 issue. let checkkey wait a timer interrupt.
2011-02-17 fixed a bug of "0xEA not properly restored" in realmode_run(asm.S).
2011-02-16 fixed a bug on stack checking in realmode_run(asm.S).
2011-02-01 prevent IO.SYS from wiping out int32-int3F.
2011-01-31 realmode .com style program support.
2011-01-14 add comments on how to alter the leading 0xEB for buggy Acer.
2011-01-07 (Roy)supported drbio.sys that is packed with pack101.

------------------------------------------------------------------------
r14 | Roy | 2010-12-26 09:03:13 +0800 (Sun, 26 Dec 2010) | 3 lines

wee-2010-12-25 import.
- makefile patch from http://bbs.znpc.net/viewthread.php?tid=5838&page=16&fromuid=14598#pid46984
- changed prototype of rawread to match Grub4DOS
------------------------------------------------------------------------
r13 | Roy | 2010-12-23 19:07:09 +0800 (Thu, 23 Dec 2010) | 1 line
